force-app/main/default/objects/Activity/fields/FSL__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>FSL__Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Appointment</fullName>
            </value>
            <value>
                <fullName>Resource Absence</fullName>
            </value>
            <value>
                <fullName>Ligações</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>