force-app/main/default/objects/Activity/fields/HorarioEntrega__c.field-meta.xml
<CustomField>
    <fullName>HorarioEntrega__c</fullName>
    <label>Horário Entrega</label>
    <type>Time</type>
</CustomField>