force-app/main/default/objects/Activity/fields/HorarioVencimento__c.field-meta.xml
<CustomField>
    <fullName>HorarioVencimento__c</fullName>
    <label>Horário Vencimento</label>
    <type>Time</type>
</CustomField>