force-app/main/default/objects/Activity/fields/IdServiceAppointment__c.field-meta.xml
<CustomField>
    <fullName>IdServiceAppointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visita</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>