force-app/main/default/objects/Activity/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Armazena o id do lead.
Campo necessário para não perder a relação do lead, pois quando um registro é convertido o campo whoid é alterado para o id da oportunidade.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Atividades</relationshipLabel>
    <relationshipName>Atividades</relationshipName>
    <type>Lookup</type>
</CustomField>