force-app/main/default/objects/Activity/fields/TipoAtendimento__c.field-meta.xml
<CustomField>
    <fullName>TipoAtendimento__c</fullName>
    <description>Identifica o perfil de atendimento</description>
    <label>Tipo de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Médico Cooperado</fullName>
            </value>
            <value>
                <fullName>Pessoa Física</fullName>
            </value>
            <value>
                <fullName>Pessoa Física RN</fullName>
            </value>
            <value>
                <fullName>Pessoa Jurídica</fullName>
            </value>
            <value>
                <fullName>Pessoa Jurídica - Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>